--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.3.1",
-    "bootstrap": "^4.3.1",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.6",
     "react-apollo": "^2.5.4",
     "react-dom": "^16.8.6",
+    "react-materialize": "^3.8.10",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.8"
   },
