--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "bluebird": "^3.5.4",
-    "cookie-parser": "~1.4.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.16.4",
@@ -16,7 +16,11 @@
     "graphql-date": "^1.0.3",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.2",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
+    "passport-jwt": "^4.0.0"
   }
 }
