--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "apollo-boost": "^0.3.1",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
+    "js-cookie": "^2.2.1",
+    "jwt-decode": "^2.2.0",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.6",
     "react-apollo": "^2.5.4",
