--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^16.8.6",
     "react-apollo": "^2.5.4",
     "react-dom": "^16.8.6",
+    "react-draggable": "^4.3.1",
     "react-materialize": "^3.8.10",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.8"
