--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "apollo-boost": "^0.3.1",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
+    "html2canvas": "^1.0.0-rc.5",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^2.2.0",
     "materialize-css": "^1.0.0-rc.2",
