--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express-graphql": "^0.8.0",
     "graphql": "^14.2.1",
     "graphql-date": "^1.0.3",
+    "html2canvas-proxy": "^1.0.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
